src/main/java/org/example/MyWitcher/pattern/creational/abstractfactory/ex1/bad/ManualTester.java
package org.example.MyWitcher.pattern.creational.abstractfactory.ex1.bad;

public class ManualTester {
    public void testCode() {
        System.out.println("ManualTester");
    }
}
